Polish UI for creating and editing user Profile

--- a/BallClub/BallClub/Storyboards/Login.storyboard
+++ b/BallClub/BallClub/Storyboards/Login.storyboard
@@ -695,8 +695,20 @@ EEZvcmdvdCB5b3VyIGxvZ2luIGRldGFpbHMQEBA/IEdldCBoZWxwIGhlcmUuA
                                                         <constraint firstAttribute="width" constant="30" id="mJg-7I-HbG"/>
                                                     </constraints>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0nv-fV-3Sx">
+                                                    <rect key="frame" x="341" y="90" width="230" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="0Om-i3-T0R"/>
+                                                        <constraint firstAttribute="width" constant="230" id="P4t-Xj-56b"/>
+                                                    </constraints>
+                                                    <connections>
+                                                        <action selector="showGenderDropDown:" destination="zH9-Uv-g5N" eventType="touchUpInside" id="855-lz-gVN"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="0nv-fV-3Sx" firstAttribute="leading" secondItem="FDC-DC-XRv" secondAttribute="trailing" constant="56" id="5QP-as-yOM"/>
+                                                <constraint firstItem="0nv-fV-3Sx" firstAttribute="top" secondItem="b2D-hy-yv3" secondAttribute="bottom" constant="20" id="RHQ-PO-ZrL"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="pws-bN-3fb" secondAttribute="trailing" constant="21" id="UKP-bA-jvX"/>
                                                 <constraint firstItem="b2D-hy-yv3" firstAttribute="top" secondItem="rrE-3j-NTh" secondAttribute="topMargin" constant="12" id="XDH-g7-ddE"/>
                                                 <constraint firstItem="b2D-hy-yv3" firstAttribute="width" secondItem="Gf3-cx-q7T" secondAttribute="width" id="Xh6-Ut-c5B"/>
@@ -706,6 +718,7 @@ EEZvcmdvdCB5b3VyIGxvZ2luIGRldGFpbHMQEBA/IEdldCBoZWxwIGhlcmUuA
                                                 <constraint firstItem="pws-bN-3fb" firstAttribute="top" secondItem="b2D-hy-yv3" secondAttribute="bottom" constant="20" id="nUa-t2-Wxc"/>
                                                 <constraint firstItem="Gf3-cx-q7T" firstAttribute="leading" secondItem="rrE-3j-NTh" secondAttribute="leadingMargin" constant="9" id="qw5-xS-l2G"/>
                                                 <constraint firstItem="vl3-CU-xDq" firstAttribute="top" secondItem="Gf3-cx-q7T" secondAttribute="bottom" constant="20" id="tjD-Dg-hN0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="0nv-fV-3Sx" secondAttribute="trailing" constant="21" id="uu6-VO-Vb2"/>
                                                 <constraint firstItem="vl3-CU-xDq" firstAttribute="leading" secondItem="rrE-3j-NTh" secondAttribute="leadingMargin" constant="9" id="uyQ-lw-qb8"/>
                                                 <constraint firstItem="Gf3-cx-q7T" firstAttribute="top" secondItem="rrE-3j-NTh" secondAttribute="topMargin" constant="12" id="w1i-CC-vu4"/>
                                                 <constraint firstItem="FDC-DC-XRv" firstAttribute="leading" secondItem="vl3-CU-xDq" secondAttribute="trailing" constant="8" id="wWX-KA-CL1"/>
@@ -837,6 +850,7 @@ EEZvcmdvdCB5b3VyIGxvZ2luIGRldGFpbHMQEBA/IEdldCBoZWxwIGhlcmUuA
                         <outlet property="favoriteTeamTextField" destination="pD7-MH-MYn" id="2mH-gO-x05"/>
                         <outlet property="firstNameTextField" destination="w7L-Le-nBY" id="5cV-yg-K46"/>
                         <outlet property="forwardButton" destination="hdr-6H-brt" id="1iP-hd-The"/>
+                        <outlet property="genderButton" destination="0nv-fV-3Sx" id="VP4-Vf-vAf"/>
                         <outlet property="guardButton" destination="qBh-iD-BhC" id="P33-Pg-g6u"/>
                         <outlet property="heightTextField" destination="Gf3-cx-q7T" id="PEm-tl-Zfj"/>
                         <outlet property="homeCityTextField" destination="BEf-mz-gN1" id="q44-oR-meg"/>
