--- a/BallClub/BallClub/Storyboards/Maps.storyboard
+++ b/BallClub/BallClub/Storyboards/Maps.storyboard
@@ -60,6 +60,9 @@
                             <barButtonItem image="ic_navigation_search" id="XRi-G5-dp2">
                                 <inset key="imageInsets" minX="0.0" minY="0.0" maxX="-10" maxY="0.0"/>
                                 <color key="tintColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <segue destination="d3N-W6-Ed8" kind="show" identifier="LocationListSegue" id="jJg-mL-Wph"/>
+                                </connections>
                             </barButtonItem>
                             <barButtonItem image="ic__navigation_def_location" id="zJ1-gc-kpb">
                                 <inset key="imageInsets" minX="0.0" minY="0.0" maxX="-20" maxY="0.0"/>
@@ -75,6 +78,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLG-Za-7lU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1282" y="350"/>
+        </scene>
+        <!--Location List View Controller-->
+        <scene sceneID="MVP-eQ-0jC">
+            <objects>
+                <viewController id="d3N-W6-Ed8" customClass="LocationListViewController" customModule="BallClub" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NtH-Wa-C3J"/>
+                        <viewControllerLayoutGuide type="bottom" id="p11-8U-zia"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7aX-2K-Ouc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LK1-X8-X3Y">
+                                <rect key="frame" x="0.0" y="72" width="375" height="546"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="0.52941176469999995" green="0.1764705882" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CellIdentifier" id="Ru9-71-4F7">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ru9-71-4F7" id="uoc-lB-AiT">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="d3N-W6-Ed8" id="NUs-Up-ob8"/>
+                                    <outlet property="delegate" destination="d3N-W6-Ed8" id="P2d-zz-vfk"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wFm-Mi-IhQ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="d3N-W6-Ed8" id="cXS-aQ-5E1"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="wFm-Mi-IhQ" id="AOD-nf-31x"/>
+                        <outlet property="tableView" destination="LK1-X8-X3Y" id="vlK-jP-Sa9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A3r-0g-e7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1280.8" y="1111.3943028485758"/>
         </scene>
         <!--Map Detail View Controller-->
         <scene sceneID="fCQ-yQ-3zk">
